--- a/ListesMOuvements.css
+++ b/ListesMOuvements.css
@@ -13,3 +13,17 @@
 a{
     color: white;
 }
+
+.h1{
+    background-image: url('images/Super-Smash-Bros-Ultimate-Legend-of-Zelda-Stages.webp');
+    text-align: center;
+    padding-top: 300px;
+    font-size: 50px;
+}
+.down {
+    background-color: black;
+    background-size: cover;
+    padding: 50px;
+    margin: 0px;
+    padding-left: 450px;
+}
