--- a/a propos.css
+++ b/a propos.css
@@ -44,12 +44,6 @@ h1{
   }
 
 
-.image3 {
-  position: absolute;
-  top: 1300px;
-  left: 500px;
-}
-
   a{
     color:white;
     font-size: 30px;
@@ -58,5 +52,9 @@ h1{
 h1{
     color: white;
     font-size: 50px;
-    font-style: 'Montserrat Black';
+}
+
+h2{
+    color: white;
+    text-align: center;
 }
