Finition de À propos

--- a/a propos.css
+++ b/a propos.css
@@ -1,12 +1,8 @@
 body{
     background: #212121;
-<<<<<<< HEAD
     font-family: 'Montserrat', sans-serif;
-=======
     color: white;
-    font-family:;
    
->>>>>>> ab42e074919d14b6ebad11578991baff628d5f84
 }
 
 .banner{
@@ -33,7 +29,6 @@ h1{
     margin: 0px;
     padding-left: 450px;
 }
-<<<<<<< HEAD
 
 
   .image1 {
@@ -60,8 +55,7 @@ h1{
 
 h2{
     color: white;
-    text-align: center;
-=======
+    text-align: center;}
 .paragraphe{
   font-weight: 10px;
 padding-left: 100px;
@@ -74,5 +68,4 @@ padding-left: 100px;
 a{
     color: white;
     font-size: 30px;
->>>>>>> ab42e074919d14b6ebad11578991baff628d5f84
 }
