--- a/contact.css
+++ b/contact.css
@@ -97,3 +97,10 @@ a{
     left: 50%;
     transform: translate(-50%, -50%);
   }
+
+  .footer {
+    position: absolute;
+    top: 140%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
